html <td th:text=${obj.taskType.type}></td> Mapper、テーブル　修正

--- a/TodoApplication/src/main/resources/templates/task/taskList.html
+++ b/TodoApplication/src/main/resources/templates/task/taskList.html
@@ -10,9 +10,8 @@
 		<tr th:each="obj : ${taskList}">
 			<td th:text=${obj.id}></td>
 			<td th:text=${obj.title}></td>
-			<td th:text=${obj.detail}></td>
-			<td th:text=${obj.type}></td>
 			<td th:text=${obj.deadline}></td>
+			<td th:text=${obj.taskType.type}></td>
 		</tr>
 	</table>
 </body>
