--- a/TodoApplication/src/main/resources/templates/task/taskList.html
+++ b/TodoApplication/src/main/resources/templates/task/taskList.html
@@ -4,6 +4,26 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
+<form method="POST" th:action="${taskForm.newTask}? @{/task/insert} : @{/task/update}" th:object="${taskForm}">
+	<label>タスクタイプ（選択してください）：</label>
+	<select name="typeId">
+	<option value="1" th:selected="*{typeId == 1}">緊急</option>
+	<option value="2" th:selected="*{typeId == 2}">重要</option>
+	<option value="3" th:selected="*{typeId == 3}">できれば</option>
+	</select><br>
+	<div ></div>
+	<label>やること：</label>
+	<input type="text" name="title" th:value="*{title}" /><br>
+	<div ></div>
+	<label>詳細：</label>
+	<input type="text" name="detail" th:value="*{detail}" /><br>
+	<div ></div>
+	<label>期限：</label>
+	<input type="datetime-local" name="deadline" th:value="*{deadline}" /><br>
+	<div ></div>
+	<input  th:if="${taskId}" type="hidden" name="taskId" th:value="${taskId}">
+	<input type="submit" value="送信">
+</form>
 <body>
 	<h3>タスク一覧</h3>
 	<table>
