--- a/TodoApplication/src/main/resources/templates/task/taskList.html
+++ b/TodoApplication/src/main/resources/templates/task/taskList.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
+<body>
+<p th:if="${complete}" th:text="${complete}"></p>
 <form method="POST" th:action="${taskForm.newTask}? @{/task/insert} : @{/task/update}" th:object="${taskForm}">
 	<label>タスクタイプ（選択してください）：</label>
 	<select name="typeId">
@@ -20,11 +22,11 @@
 	<div ></div>
 	<label>期限：</label>
 	<input type="datetime-local" name="deadline" th:value="*{deadline}" /><br>
-	<div ></div>
 	<input  th:if="${taskId}" type="hidden" name="taskId" th:value="${taskId}">
+	<div ></div>
+
 	<input type="submit" value="送信">
 </form>
-<body>
 	<h3>タスク一覧</h3>
 	<table>
 		<tr th:each="obj : ${taskList}">
