--- a/TodoApplication/src/main/resources/templates/task/taskList.html
+++ b/TodoApplication/src/main/resources/templates/task/taskList.html
@@ -5,28 +5,29 @@
 <title>Insert title here</title>
 </head>
 <body>
-<p th:if="${complete}" th:text="${complete}"></p>
-<form method="POST" th:action="${taskForm.newTask}? @{/task/insert} : @{/task/update}" th:object="${taskForm}">
-	<label>タスクタイプ（選択してください）：</label>
-	<select name="typeId">
-	<option value="1" th:selected="*{typeId == 1}">緊急</option>
-	<option value="2" th:selected="*{typeId == 2}">重要</option>
-	<option value="3" th:selected="*{typeId == 3}">できれば</option>
-	</select><br>
-	<div ></div>
-	<label>やること：</label>
-	<input type="text" name="title" th:value="*{title}" /><br>
-	<div ></div>
-	<label>詳細：</label>
-	<input type="text" name="detail" th:value="*{detail}" /><br>
-	<div ></div>
-	<label>期限：</label>
-	<input type="datetime-local" name="deadline" th:value="*{deadline}" /><br>
-	<input  th:if="${taskId}" type="hidden" name="taskId" th:value="${taskId}">
-	<div ></div>
+	<p th:if="${complete}" th:text="${complete}"></p>
+	<form method="POST"
+		th:action="${taskForm.newTask}? @{/task/insert} : @{/task/update}"
+		th:object="${taskForm}">
+		<label>タスクタイプ（選択してください）：</label> <select name="typeId">
+			<option value="1" th:selected="*{typeId == 1}">緊急</option>
+			<option value="2" th:selected="*{typeId == 2}">重要</option>
+			<option value="3" th:selected="*{typeId == 3}">できれば</option>
+		</select><br>
+		<div></div>
+		<label>やること：</label> <input type="text" name="title"
+			th:value="*{title}" /><br>
+		<div></div>
+		<label>詳細：</label> <input type="text" name="detail"
+			th:value="*{detail}" /><br>
+		<div></div>
+		<label>期限：</label> <input type="datetime-local" name="deadline"
+			th:value="*{deadline}" /><br> <input th:if="${taskId}"
+			type="hidden" name="taskId" th:value="${taskId}">
+		<div></div>
 
-	<input type="submit" value="送信">
-</form>
+		<input type="submit" value="送信">
+	</form>
 	<h3>タスク一覧</h3>
 	<table>
 		<tr th:each="obj : ${taskList}">
@@ -35,6 +36,12 @@
 			<td th:text=${obj.deadline}></td>
 			<td th:text=${obj.taskType.type}></td>
 			<td><a type="button" th:href="@{/task/{id}(id=${obj.id})}">編集</a></td>
+			<td>
+				<form method="POST" th:action="@{/task/delete}">
+					<input type="hidden" name="taskId" th:value="${obj.id}"> <input
+						type="submit" value="削除">
+				</form>
+			</td>
 		</tr>
 	</table>
 </body>
