--- a/TodoApplication/src/main/resources/templates/task/taskList.html
+++ b/TodoApplication/src/main/resources/templates/task/taskList.html
@@ -5,6 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
+	<h1 th:text="${title}"></h1>
 	<p th:if="${complete}" th:text="${complete}"></p>
 	<form method="POST"
 		th:action="${taskForm.newTask}? @{/task/insert} : @{/task/update}"
@@ -14,19 +15,18 @@
 			<option value="2" th:selected="*{typeId == 2}">重要</option>
 			<option value="3" th:selected="*{typeId == 3}">できれば</option>
 		</select><br>
-		<div></div>
+		<div th:if="${#fields.hasErrors('typeId')}" th:errors="*{typeId}"></div>
 		<label>やること：</label> <input type="text" name="title"
 			th:value="*{title}" /><br>
-		<div></div>
+		<div th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
 		<label>詳細：</label> <input type="text" name="detail"
 			th:value="*{detail}" /><br>
-		<div></div>
+		<div th:if="${#fields.hasErrors('detail')}" th:errors="*{detail}"></div>
 		<label>期限：</label> <input type="datetime-local" name="deadline"
-			th:value="*{deadline}" /><br> <input th:if="${taskId}"
-			type="hidden" name="taskId" th:value="${taskId}">
-		<div></div>
-
-		<input type="submit" value="送信">
+			th:value="*{deadline}" /><br>
+		<div th:if="${#fields.hasErrors('deadline')}" th:errors="*{deadline}"></div>
+		<input th:if="${taskId}" type="hidden" name="taskId"
+			th:value="${taskId}"> <input type="submit" value="送信">
 	</form>
 	<h3>タスク一覧</h3>
 	<table>
