--- a/TodoApplication/src/main/resources/templates/task/taskList.html
+++ b/TodoApplication/src/main/resources/templates/task/taskList.html
@@ -1,32 +1,50 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+<meta charset="UTF-8"></meta>
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- CSS読込 -->
+<link rel="stylesheet"
+	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+<link rel="stylesheet" th:href="@{/css/task/task.css}">
+<!-- JS読込 -->
+<script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
+<title>タスク一覧</title>
 </head>
-<body>
-	<h1 th:text="${title}"></h1>
-	<p th:if="${complete}" th:text="${complete}"></p>
+<body class="bg-light">
+	<h1 th:text="${title}" class="text-center"></h1>
+	<p th:if="${complete}" th:text="${complete}" class="text-center"></p>
 	<form method="POST"
 		th:action="${taskForm.newTask}? @{/task/insert} : @{/task/update}"
-		th:object="${taskForm}">
-		<label>タスクタイプ（選択してください）：</label> <select name="typeId">
-			<option value="1" th:selected="*{typeId == 1}">緊急</option>
-			<option value="2" th:selected="*{typeId == 2}">重要</option>
-			<option value="3" th:selected="*{typeId == 3}">できれば</option>
-		</select><br>
+		th:object="${taskForm}"
+		class="form-task">
+		<div class="form-group">
+			<label>タスクタイプ</label> <select name="typeId" class="form-control">
+				<option value="1" th:selected="*{typeId == 1}">緊急</option>
+				<option value="2" th:selected="*{typeId == 2}">重要</option>
+				<option value="3" th:selected="*{typeId == 3}">できれば</option>
+			</select><br>
 		<div th:if="${#fields.hasErrors('typeId')}" th:errors="*{typeId}"></div>
-		<label>やること：</label> <input type="text" name="title"
-			th:value="*{title}" /><br>
+		</div>
+		<div class="form-group">
+		<label>やること  </label> <input type="text" name="title"
+			th:value="*{title}" class="form-control"/><br>
 		<div th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
-		<label>詳細：</label> <input type="text" name="detail"
-			th:value="*{detail}" /><br>
+		</div>
+		<div class="form-group">
+		<label>詳細</label> <input type="text" name="detail"
+			th:value="*{detail}" class="form-control"/><br>
 		<div th:if="${#fields.hasErrors('detail')}" th:errors="*{detail}"></div>
-		<label>期限：</label> <input type="datetime-local" name="deadline"
-			th:value="*{deadline}" /><br>
+		</div>
+		<div class="form-group">
+		<label>期限</label> <input type="datetime-local" name="deadline"
+			th:value="*{deadline}" class="form-control"/><br>
 		<div th:if="${#fields.hasErrors('deadline')}" th:errors="*{deadline}"></div>
+		</div>
 		<input th:if="${taskId}" type="hidden" name="taskId"
-			th:value="${taskId}"> <input type="submit" value="送信">
+			th:value="${taskId}"> <input type="submit" value="登録" class="btn btn-primary w-100 mt-3">
 	</form>
 	<h3>タスク一覧</h3>
 	<table>
